--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Hakkell ignore file
 dist
 dist-*
 cabal-dev
@@ -20,3 +21,6 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+
+## Custom igonre
+**/python/
